added mysql container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,17 @@ nginx:
     - php
   volumes_from: 
     - app 
+    
+mysql: 
+  image: mariadb
+  environment: 
+    MYSQL_ALLOW_EMPTY_PASSWORD: yes
+    MYSQL_DATABASE: nodeapp
+
 
 php: 
   image: php:5.6-fpm
   volumes_from: 
     - app 
+  links: 
+    - mysql:db
